fix(webui): Align checkboxes better

--- a/webservice/www/css/general.css
+++ b/webservice/www/css/general.css
@@ -96,6 +96,7 @@
     input[type="checkbox"] {
         appearance: none;
         border-style: solid;
+        vertical-align: bottom;
         &:checked {
             border-color: var(--green);
             background: var(--green);
